src/test/resources/refCompilerOutput/invalid/semanticErr/exit/exitNonInt.waccast
-- Compiling...
Errors detected during compilation! Exit code 200 returned.
Semantic Error at 13:7 -- Incompatible type at x (expected: INT, actual: CHAR)
